<resources>
    <string name="app_name">FYP Urinalysis</string>
    <string name="standard_deviation">Standard Deviation:</string>
    <string name="average">Average:</string>
    <string name="lowest">Lowest:</string>
    <string name="highest">Highest:</string>
    <string name="latest">Latest:</string>
    <string name="add_data">Add New Test Result</string>
    <string name="notes">Add note</string>
    <string name="password">Password</string>
    <string name="send_label">Send Data</string>
    <string name="cancel_label">Cancel</string>
    <string name="report">Report</string>
</resources>
